--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -9,6 +9,7 @@ awscli
 flake8
 python-dotenv>=0.5.1
 {% if cookiecutter.python_interpreter != 'python3' %}
+dvc
 
 # backwards compatibility
 pathlib2
