--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -8,9 +8,8 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
-{% if cookiecutter.python_interpreter != 'python3' %}
 dvc
-
-# backwards compatibility
-pathlib2
-{% endif %}
+numpy
+pandas
+sagemaker
+scikit-learn
